converters/bibtex-converter/src/main/java/edu/mit/simile/babel/bibtex/internal/BibtexGrammar.java
/* Generated By:JavaCC: Do not edit this line. BibtexGrammar.java */
package edu.mit.simile.babel.bibtex.internal;

import java.io.*;
import java.util.*;
import edu.mit.simile.babel.bibtex.*;

public final class BibtexGrammar implements BibtexGrammarConstants {

    static final String [][] months = new String[][]{
        {"jan", "{January}"},
        {"feb", "{February}"},
        {"mar", "{March}"},
        {"apr", "{April}"},
        {"may", "{May}"},
        {"jun", "{June}"},
        {"jul", "{July}"},
        {"aug", "{August}"},
        {"sep", "{September}"},
        {"oct", "{October}"},
        {"nov", "{November}"},
        {"dec", "{December}"}
    };

    private String preamble = "";
    private String comment = "";
    private Map strings = new HashMap();
    private List records = new ArrayList();

    /** 
      * Returns the records.  Should be called after parse(). 
      */
    public List getRecords(){
        return records;
    }

    /**
      * Parses a file and prints debugging output. 
      */
    public static void main(String args[]) throws ParseException {
        try {
            BibtexGrammar p = new BibtexGrammar(new BufferedReader(new FileReader(args[0])));
            p.parse();
            p.printout();
        } catch (FileNotFoundException e){
            e.printStackTrace();
        }
    }

    /** 
      * Prints debugging output. Should be called after parse(). 
      */
    void printout() {
        if (!"".equals(preamble)) System.out.println("\nDEBUG: Found Preamble: \n" + preamble);

        System.out.println("\nDEBUG: Found " + strings.size() + " Strings:");
        Iterator iter = strings.keySet().iterator();
        while(iter.hasNext()){
            Object key = iter.next();
            System.out.println("\t" + key + "\t" + strings.get(key));
        }

        System.out.println("\nDEBUG: Found " + records.size() + " Records:");
        iter = records.iterator();
        while (iter.hasNext()) {
            System.out.println("-----------------------------------");
            BibMap record = (BibMap) iter.next();
            System.out.println("TYPE:\t" + record.getType());
            System.out.println("KEY:\t" + record.getKey());
            Iterator jiter = record.keySet().iterator();
            while (jiter.hasNext()) {
                String key = (String) jiter.next();
                System.out.println("\tFIELD:\t" + key + "\t" + record.get(key));
            }
            System.out.println("");
        }
    }

/** 
  * A bibtex file is basically a concatenation of records, which are
  * either string definitions or proper bibliographic records.  This
  * method just consumes records until the file ends, at which point it
  * resolves cross-references within individual records. 
  */
  final public void parse() throws ParseException {
    // Load the default string expansions for months.  My impression
    // is that these are supposed to expand to locale-specific strings
    // for the month.  This hack effectively makes this an "English 
    // bibtex parser"
    for (int i = 0; i < months.length; i++) {
        strings.put(months[i][0], months[i][1]);
    }
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      if (jj_2_2(2)) {
        strdef();
      } else if (jj_2_3(2)) {
        comdef();
      } else if (jj_2_4(2)) {
        recdef();
      } else if (jj_2_5(2)) {
        predef();
      } else if (jj_2_6(2)) {
        jj_consume_token(WS);
      } else if (jj_2_7(2)) {
        jj_consume_token(0);
                                                                 {if (true) return;}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/** 
  * Consumes a preamble definition. 
  */
  final public void predef() throws ParseException {
    String val;
    jj_consume_token(AT);
    jj_consume_token(PRE);
    if (jj_2_8(2)) {
      jj_consume_token(WS);
    } else {
      ;
    }
    if (jj_2_13(2)) {
      jj_consume_token(LBRACE);
      if (jj_2_9(2)) {
        jj_consume_token(WS);
      } else {
        ;
      }
      val = vals();
      if (jj_2_10(2)) {
        jj_consume_token(WS);
      } else {
        ;
      }
      jj_consume_token(RBRACE);
    } else if (jj_2_14(2)) {
      jj_consume_token(LPAREN);
      if (jj_2_11(2)) {
        jj_consume_token(WS);
      } else {
        ;
      }
      val = vals();
      if (jj_2_12(2)) {
        jj_consume_token(WS);
      } else {
        ;
      }
      jj_consume_token(RPAREN);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
      preamble = preamble + val;
  }

/** 
  * Consumes a single string definition. A string definition is
  * basically a single pair. 
  */
  final public void strdef() throws ParseException {
    jj_consume_token(AT);
    jj_consume_token(STR);
    if (jj_2_15(2)) {
      jj_consume_token(WS);
    } else {
      ;
    }
    if (jj_2_18(2)) {
      jj_consume_token(LBRACE);
      pair(strings);
      if (jj_2_16(2)) {
        jj_consume_token(WS);
      } else {
        ;
      }
      jj_consume_token(RBRACE);
    } else if (jj_2_19(2)) {
      jj_consume_token(LPAREN);
      pair(strings);
      if (jj_2_17(2)) {
        jj_consume_token(WS);
      } else {
        ;
      }
      jj_consume_token(RPAREN);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/** 
  * Consumes a comment definition.
  */
  final public void comdef() throws ParseException {
    if (jj_2_29(2)) {
      jj_consume_token(AT);
      jj_consume_token(COMMENT);
      if (jj_2_20(2)) {
        jj_consume_token(WS);
      } else {
        ;
      }
      if (jj_2_27(2)) {
        jj_consume_token(LBRACE);
        label_2:
        while (true) {
          if (jj_2_21(2)) {
            jj_consume_token(WORD);
          } else if (jj_2_22(2)) {
            jj_consume_token(WS);
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
          if (jj_2_23(2)) {
            ;
          } else {
            break label_2;
          }
        }
        jj_consume_token(RBRACE);
      } else if (jj_2_28(2)) {
        jj_consume_token(LPAREN);
        label_3:
        while (true) {
          if (jj_2_24(2)) {
            jj_consume_token(WORD);
          } else if (jj_2_25(2)) {
            jj_consume_token(WS);
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
          if (jj_2_26(2)) {
            ;
          } else {
            break label_3;
          }
        }
        jj_consume_token(RPAREN);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_30(2)) {
      jj_consume_token(COMM);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/** 
  * Consumes a single record definition. 
  */
  final public void recdef() throws ParseException {
    Token t1, t2 = null;
    BibMap record = new BibMap();
    jj_consume_token(AT);
    t1 = jj_consume_token(WORD);
    if (jj_2_31(2)) {
      jj_consume_token(WS);
    } else {
      ;
    }
    if (jj_2_40(2)) {
      jj_consume_token(LBRACE);
      if (jj_2_32(2)) {
        jj_consume_token(WS);
      } else {
        ;
      }
      t2 = jj_consume_token(WORD);
      label_4:
      while (true) {
        if (jj_2_33(2)) {
          ;
        } else {
          break label_4;
        }
        jj_consume_token(COMMA);
        pair(record);
      }
      if (jj_2_34(2)) {
        jj_consume_token(COMMA);
      } else {
        ;
      }
      if (jj_2_35(2)) {
        jj_consume_token(WS);
      } else {
        ;
      }
      jj_consume_token(RBRACE);
    } else if (jj_2_41(2)) {
      jj_consume_token(LPAREN);
      if (jj_2_36(2)) {
        jj_consume_token(WS);
      } else {
        ;
      }
      t2 = jj_consume_token(WORD);
      label_5:
      while (true) {
        if (jj_2_37(2)) {
          ;
        } else {
          break label_5;
        }
        jj_consume_token(COMMA);
        pair(record);
      }
      if (jj_2_38(2)) {
        jj_consume_token(COMMA);
      } else {
        ;
      }
      if (jj_2_39(2)) {
        jj_consume_token(WS);
      } else {
        ;
      }
      jj_consume_token(RPAREN);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
        String type = t1.toString().toLowerCase(), key = t2.toString();
        record.setType(type.equals("conference") ? "inproceedings" : type);
        record.setKey(key);
        records.add(record);
  }

/** 
  * Consumes a pair and places them in map. 
  */
  final public void pair(Map map) throws ParseException {
    Token id;
    String val;
    if (jj_2_42(2)) {
      jj_consume_token(WS);
    } else {
      ;
    }
    id = jj_consume_token(WORD);
    if (jj_2_43(2)) {
      jj_consume_token(WS);
    } else {
      ;
    }
    jj_consume_token(EQ);
    if (jj_2_44(2)) {
      jj_consume_token(WS);
    } else {
      ;
    }
    val = vals();
      map.put(id.toString().toLowerCase(), val);
  }

/** 
  * Consumes a concatenation of "values" 
  */
  final public String vals() throws ParseException {
    String val;
    StringBuffer sb = new StringBuffer();
    val = val();
                  sb.append(val);
    label_6:
    while (true) {
      if (jj_2_45(2)) {
        ;
      } else {
        break label_6;
      }
      if (jj_2_46(2)) {
        jj_consume_token(WS);
      } else {
        ;
      }
      jj_consume_token(HASH);
      if (jj_2_47(2)) {
        jj_consume_token(WS);
      } else {
        ;
      }
      val = val();
            if (sb.charAt(0) == '{') {
                sb.deleteCharAt(sb.length()-1); // must be a curly brace
            }
            if (val.startsWith("{")) {
                val = val.substring(1, val.length()-1);
            }
            sb.append(val + "}");
            //  sb.append(" " + val + "}");

    }
      {if (true) return sb.toString();}
    throw new Error("Missing return statement in function");
  }

/** 
  * Consumes a value, plus any trailing whitespace 
  */
  final public String val() throws ParseException {
    Token token;
    String val;
    if (jj_2_48(2)) {
      jj_consume_token(LBRACE);
      val = wordsq();
      jj_consume_token(RBRACE);
                                         {if (true) return "{" + val + "}";}
    } else if (jj_2_49(2)) {
      jj_consume_token(QUOTE);
      val = words();
      jj_consume_token(QUOTE);
                                         {if (true) return "{" + val + "}";}
    } else if (jj_2_50(2)) {
      token = jj_consume_token(WORD);
        String key = token.toString().toLowerCase();
        if (strings.containsKey(key)) {
            {if (true) return (String) strings.get(key);}
        } else {
            {if (true) return key;}
        }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/** 
  * Consumes a set of words, where a quote token is a word. 
  */
  final public String wordsq() throws ParseException {
    String s;
    Token t;
    StringBuffer sb = new StringBuffer();
    label_7:
    while (true) {
      if (jj_2_51(2)) {
        ;
      } else {
        break label_7;
      }
      if (jj_2_52(2)) {
        s = wordq();
                 sb.append(s);
      } else if (jj_2_53(2)) {
        jj_consume_token(LBRACE);
        s = wordsq();
        jj_consume_token(RBRACE);
                                        sb.append("{" + s + "}");
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
      {if (true) return sb.toString();}
    throw new Error("Missing return statement in function");
  }

/** 
  * Consumes a set of words, where a quote token is not a word. 
  */
  final public String words() throws ParseException {
    String s;
    Token t;
    StringBuffer sb = new StringBuffer();
    label_8:
    while (true) {
      if (jj_2_54(2)) {
        ;
      } else {
        break label_8;
      }
      if (jj_2_55(2)) {
        s = word();
                sb.append(s);
      } else if (jj_2_56(2)) {
        jj_consume_token(LBRACE);
        s = wordsq();
        jj_consume_token(RBRACE);
                                        sb.append("{" + s + "}");
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
      {if (true) return sb.toString();}
    throw new Error("Missing return statement in function");
  }

/** 
  * Consumes and returns a "word", where a quote token is a word. 
  */
  final public String wordq() throws ParseException {
    Token t;
    if (jj_2_57(2)) {
      t = jj_consume_token(WS);
    } else if (jj_2_58(2)) {
      t = jj_consume_token(WORD);
    } else if (jj_2_59(2)) {
      t = jj_consume_token(EQ);
    } else if (jj_2_60(2)) {
      t = jj_consume_token(LPAREN);
    } else if (jj_2_61(2)) {
      t = jj_consume_token(RPAREN);
    } else if (jj_2_62(2)) {
      t = jj_consume_token(AT);
    } else if (jj_2_63(2)) {
      t = jj_consume_token(QCHAR);
    } else if (jj_2_64(2)) {
      t = jj_consume_token(STR);
    } else if (jj_2_65(2)) {
      t = jj_consume_token(COMMA);
    } else if (jj_2_66(2)) {
      t = jj_consume_token(HASH);
    } else if (jj_2_67(2)) {
      t = jj_consume_token(PRE);
    } else if (jj_2_68(2)) {
      t = jj_consume_token(QUOTE);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
      {if (true) return(t.toString());}
    throw new Error("Missing return statement in function");
  }

/** 
  * Consumes and returns a "word", where a quote token is not a word. 
  */
  final public String word() throws ParseException {
    Token t;
    if (jj_2_69(2)) {
      t = jj_consume_token(WS);
    } else if (jj_2_70(2)) {
      t = jj_consume_token(WORD);
    } else if (jj_2_71(2)) {
      t = jj_consume_token(EQ);
    } else if (jj_2_72(2)) {
      t = jj_consume_token(LPAREN);
    } else if (jj_2_73(2)) {
      t = jj_consume_token(RPAREN);
    } else if (jj_2_74(2)) {
      t = jj_consume_token(AT);
    } else if (jj_2_75(2)) {
      t = jj_consume_token(QCHAR);
    } else if (jj_2_76(2)) {
      t = jj_consume_token(STR);
    } else if (jj_2_77(2)) {
      t = jj_consume_token(COMMA);
    } else if (jj_2_78(2)) {
      t = jj_consume_token(HASH);
    } else if (jj_2_79(2)) {
      t = jj_consume_token(PRE);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
      {if (true) return(t.toString());}
    throw new Error("Missing return statement in function");
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  final private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  final private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  final private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  final private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  final private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  final private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  final private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  final private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  final private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  final private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  final private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  final private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  final private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  final private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  final private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  final private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  final private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  final private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  final private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  final private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  final private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  final private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  final private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  final private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  final private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  final private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  final private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  final private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  final private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  final private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  final private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  final private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  final private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  final private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  final private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }
